--- a/index/main.css
+++ b/index/main.css
@@ -1,3 +1,34 @@
+div#main {
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	z-index:-1;
+}
+
+canvas {
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	z-index:-1;
+}
+
+
+div#text
+{
+  font-family: "topazplus", "Courier New", monospace;
+  white-space: pre-wrap;
+}
+
+noscript#textNS
+{
+  font-family: "topazplus", "Courier New", monospace;
+  white-space: pre-wrap;
+}
+
 html {
     background: url('bg.png') repeat scroll 0 0 #273229;
     font-size: 1.25em;
@@ -25,6 +56,7 @@ body {
     max-width: 700px;
     margin: 0 auto;
     padding: 0.5em 1em 0 1em;
+    background-color: black;
 }
 
 header .title {
@@ -77,11 +109,6 @@ nav a, main a, footer a {
     text-decoration: none;
     text-shadow: 0 0 1px #175736;
     padding: 0 0.25em;
-}
-
-main {
-    font-size: 0.85em;
-    text-align: justify;
 }
 
 blockquote {
